--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ h6, .h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  text-align: justify;
 }
 
 abbr[title],
@@ -299,6 +300,8 @@ figure {
 img,
 svg {
   vertical-align: middle;
+  width: 20;
+  object-fit: cover;
 }
 
 table {
